--- a/index.html
+++ b/index.html
@@ -2,8 +2,59 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
 <title>환영합니다</title>
+
+<style>
+body {
+  margin: 0;
+  background: black;
+  color: white;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
+#title {
+  margin-top: 100px;
+  font-size: 48px;
+}
+
+.subtitle {
+  font-size: 13px;
+  opacity: 0;
+  margin-top: -12px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-align: center;
+  animation: fadeIn 2s ease forwards;
+  animation-delay: 0.5s;
+}
+
+/* 부드럽게 나타나는 효과 */
+@keyframes fadeIn {
+  to {
+    opacity: 0.7;
+  }
+}
+
+.menu {
+  margin-top: 60px;
+}
+
+.menu a {
+  display: block;
+  margin: 10px 0;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.menu a:hover {
+  color: cyan;
+  transform: scale(1.1);
+}
+</style>
+
 </head>
 
 <body>
@@ -11,8 +62,8 @@
 <div class="planet"></div>
 <div class="cursor-light" id="light"></div>
 
-<!-- 제목 완전 교체 -->
 <h1 id="title">🚀 환영합니다 🚀</h1>
+<p class="subtitle">Welcome to My World.</p>
 
 <div class="menu">
   <a href="game.html">🎮 게임</a>
