--- a/index.html
+++ b/index.html
@@ -5,37 +5,72 @@
 <title>환영합니다</title>
 
 <style>
-body {
-  margin: 0;
-  background: black;
-  color: white;
-  text-align: center;
-  font-family: Arial, sans-serif;
-  /* ===== 움직이는 우주 배경 ===== */
-
+/* ===== 기본 스타일 ===== */
 body {
   margin: 0;
   overflow: hidden;
   background: radial-gradient(circle at center, #0a0f2c, #000814, #000000);
+  color: white;
+  text-align: center;
+  font-family: Arial, sans-serif;
 }
 
-/* 별 배경 */
+/* ===== 별 배경 ===== */
 body::before {
   content: "";
   position: fixed;
   width: 200%;
   height: 200%;
   background: url("https://www.transparenttextures.com/patterns/stardust.png");
-  animation: moveStars 60s linear infinite;
+  animation: moveStars 80s linear infinite;
   opacity: 0.4;
 }
 
 @keyframes moveStars {
   from { transform: translate(0, 0); }
-  to { transform: translate(-500px, -500px); }
+  to { transform: translate(-600px, -600px); }
 }
 
-/* 떠다니는 행성 */
+/* ===== 반짝이는 별 ===== */
+body::after {
+  content: "";
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(white 1px, transparent 1px);
+  background-size: 3px 3px;
+  animation: twinkle 2s infinite alternate;
+  opacity: 0.2;
+}
+
+@keyframes twinkle {
+  from { opacity: 0.1; }
+  to { opacity: 0.3; }
+}
+
+/* ===== 유성 ===== */
+.shooting-star {
+  position: absolute;
+  top: 20%;
+  left: -200px;
+  width: 200px;
+  height: 2px;
+  background: linear-gradient(90deg, white, transparent);
+  animation: shoot 5s linear infinite;
+}
+
+@keyframes shoot {
+  0% {
+    transform: translateX(0) translateY(0) rotate(20deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(1500px) translateY(300px) rotate(20deg);
+    opacity: 0;
+  }
+}
+
+/* ===== 떠다니는 행성 ===== */
 .planet {
   position: absolute;
   top: 20%;
@@ -44,40 +79,38 @@ body::before {
   height: 200px;
   background: radial-gradient(circle at 30% 30%, #00ffff, #003366);
   border-radius: 50%;
-  box-shadow: 0 0 60px cyan;
+  box-shadow: 0 0 80px cyan;
   animation: floatPlanet 6s ease-in-out infinite alternate;
 }
 
 @keyframes floatPlanet {
   from { transform: translateY(0px); }
-  to { transform: translateY(30px); }
+  to { transform: translateY(40px); }
 }
 
-}
-
+/* ===== 제목 ===== */
 #title {
   margin-top: 100px;
   font-size: 48px;
+  text-shadow: 0 0 20px cyan;
 }
 
+/* ===== 작은 간지 문구 ===== */
 .subtitle {
   font-size: 13px;
   opacity: 0;
   margin-top: -12px;
   letter-spacing: 3px;
   text-transform: uppercase;
-  text-align: center;
   animation: fadeIn 2s ease forwards;
   animation-delay: 0.5s;
 }
 
-/* 부드럽게 나타나는 효과 */
 @keyframes fadeIn {
-  to {
-    opacity: 0.7;
-  }
+  to { opacity: 0.7; }
 }
 
+/* ===== 메뉴 ===== */
 .menu {
   margin-top: 60px;
 }
@@ -102,6 +135,7 @@ body::before {
 <body>
 
 <div class="planet"></div>
+<div class="shooting-star"></div>
 <div class="cursor-light" id="light"></div>
 
 <h1 id="title">🚀 환영합니다 🚀</h1>
@@ -118,5 +152,3 @@ body::before {
 <script src="script.js"></script>
 </body>
 </html>
-/* ===== 움직이는 우주 배경 ===== */
-
