--- a/index.html
+++ b/index.html
@@ -93,23 +93,33 @@ body::before {
   to { opacity: 0.7; }
 }
 
-/* ===== 메뉴 ===== */
+/* ===== 버튼식 가로 메뉴 ===== */
 .menu {
   margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  gap: 30px; /* 메뉴 버튼 간격 */
 }
 
 .menu a {
-  display: block;
-  margin: 10px 0;
+  display: inline-block;
+  padding: 10px 25px;
+  background: rgba(0,255,255,0.1);
+  border-radius: 12px;
   color: white;
   text-decoration: none;
   font-size: 18px;
   transition: 0.3s;
+  cursor: pointer;
+  user-select: none;
+  box-shadow: 0 0 10px rgba(0,255,255,0.4);
 }
 
 .menu a:hover {
-  color: cyan;
+  background: cyan;
+  color: black;
   transform: scale(1.1);
+  box-shadow: 0 0 20px cyan;
 }
 </style>
 
