--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
   color: white;
   text-align: center;
   font-family: Arial, sans-serif;
+  cursor: none; /* 커서 숨김 */
 }
 
 /* ===== 별 배경 ===== */
@@ -75,7 +76,30 @@ body::before {
 #title {
   margin-top: 100px;
   font-size: 48px;
-  text-shadow: 0 0 20px cyan;
+  color: #00fff7;
+  animation: neonTitle 2s ease-in-out infinite alternate;
+  text-shadow:
+      0 0 10px #00fff7,
+      0 0 20px #00fff7,
+      0 0 40px #00fff7,
+      0 0 80px #00fff7;
+}
+
+@keyframes neonTitle {
+  0%,100% {
+    text-shadow:
+      0 0 10px #00fff7,
+      0 0 20px #00fff7,
+      0 0 40px #00fff7,
+      0 0 80px #00fff7;
+  }
+  50% {
+    text-shadow:
+      0 0 20px #0ff,
+      0 0 40px #0ff,
+      0 0 60px #0ff,
+      0 0 100px #0ff;
+  }
 }
 
 /* ===== 작은 간지 문구 ===== */
@@ -98,7 +122,7 @@ body::before {
   margin-top: 60px;
   display: flex;
   justify-content: center;
-  gap: 30px; /* 메뉴 버튼 간격 */
+  gap: 30px;
 }
 
 .menu a {
@@ -113,6 +137,7 @@ body::before {
   cursor: pointer;
   user-select: none;
   box-shadow: 0 0 10px rgba(0,255,255,0.4);
+  animation: neonGlow 3s ease-in-out infinite;
 }
 
 .menu a:hover {
@@ -120,6 +145,28 @@ body::before {
   color: black;
   transform: scale(1.1);
   box-shadow: 0 0 20px cyan;
+}
+
+@keyframes neonGlow {
+  0%, 100% {
+    box-shadow: 0 0 5px #00fff7, 0 0 10px #00fff7, 0 0 20px #00fff7;
+  }
+  50% {
+    box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+  }
+}
+
+/* ===== 마우스 커서 네온 ===== */
+.cursor-light {
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  pointer-events: none;
+  background: rgba(0,255,255,0.5);
+  box-shadow: 0 0 20px rgba(0,255,255,0.8);
+  transform: translate(-50%, -50%);
+  transition: transform 0.05s linear;
 }
 </style>
 
@@ -142,6 +189,13 @@ body::before {
   <a href="contact.html">📚 Contact</a>
 </div>
 
-<script src="script.js"></script>
+<script>
+  // 마우스 따라 네온 커서
+  const cursor = document.getElementById('light');
+  document.addEventListener('mousemove', e => {
+    cursor.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+  });
+</script>
+
 </body>
 </html>
