--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>💼 남강현 포트폴리오</h1>
+<h1>포트폴리오</h1>
 <p>HTML / CSS / JavaScript</p>
 <p>우주 사이트 프로젝트</p>
 <a href="index.html">← 홈으로</a>
