--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 <body>
 <h1>포트폴리오</h1>
 <p>HTML / CSS / JavaScript</p>
-<p>우주 사이트 프로젝트</p>
+<p>점검중이니 잠시만 기다려주세요</p>
 <a href="index.html">← 홈으로</a>
 </body>
 </html>
