--- a/index.html
+++ b/index.html
@@ -2,64 +2,165 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>ULTRA CYBER UNIVERSE</title>
+<title>CYBER COSMIC OVERDRIVE</title>
+
 <style>
-body {
-  margin: 0;
-  overflow: hidden;
-  background: black;
-  cursor: none;
-  font-family: Arial, sans-serif;
+body{
+  margin:0;
+  overflow:hidden;
+  background:black;
+  font-family:Arial, sans-serif;
+  cursor:none;
 }
 
-#ui {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
-  display: flex;
-  gap: 15px;
+/* WebGL */
+canvas{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:0;
 }
 
-button {
-  padding: 10px 20px;
-  background: rgba(0,255,255,0.1);
-  border: 1px solid cyan;
-  color: white;
-  font-weight: bold;
-  border-radius: 10px;
-  backdrop-filter: blur(10px);
-  cursor: pointer;
-  transition: 0.3s;
+/* 성운 */
+.nebula{
+  position:fixed;
+  width:200%;
+  height:200%;
+  top:-50%;
+  left:-50%;
+  background:
+    radial-gradient(circle at 30% 40%, rgba(0,255,255,0.15), transparent 40%),
+    radial-gradient(circle at 70% 60%, rgba(255,0,255,0.15), transparent 40%);
+  animation:rotate 200s linear infinite;
+  pointer-events:none;
+  z-index:1;
 }
-button:hover {
-  background: cyan;
-  color: black;
-  box-shadow: 0 0 20px cyan;
+@keyframes rotate{
+  from{transform:rotate(0deg);}
+  to{transform:rotate(360deg);}
 }
 
-#cursor {
-  position: fixed;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: rgba(0,255,255,0.5);
-  box-shadow: 0 0 30px cyan;
-  pointer-events: none;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
+/* UI 전체 */
+#ui{
+  position:fixed;
+  top:20px;
+  left:50%;
+  transform:translateX(-50%);
+  z-index:10;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:20px;
+}
+
+/* 메뉴 5개 */
+.menu{
+  display:flex;
+  gap:25px;
+}
+.menu a{
+  padding:10px 20px;
+  background:rgba(0,255,255,0.1);
+  border:1px solid cyan;
+  border-radius:10px;
+  color:white;
+  text-decoration:none;
+  font-weight:bold;
+  backdrop-filter:blur(10px);
+  transition:.3s;
+}
+.menu a:hover{
+  background:cyan;
+  color:black;
+  box-shadow:0 0 20px cyan;
+}
+
+/* 엔진 버튼 */
+.engine{
+  display:flex;
+  gap:15px;
+}
+button{
+  padding:8px 18px;
+  background:rgba(255,255,255,0.08);
+  border:1px solid #0ff;
+  color:white;
+  border-radius:10px;
+  backdrop-filter:blur(10px);
+  cursor:pointer;
+  transition:.3s;
+}
+button:hover{
+  background:cyan;
+  color:black;
+  box-shadow:0 0 20px cyan;
+}
+
+/* 제목 */
+#title{
+  position:fixed;
+  bottom:40px;
+  width:100%;
+  text-align:center;
+  font-size:40px;
+  color:#00fff7;
+  text-shadow:0 0 20px #0ff;
+  z-index:10;
+}
+
+/* 네온 커서 */
+#cursor{
+  position:fixed;
+  width:25px;
+  height:25px;
+  border-radius:50%;
+  background:rgba(0,255,255,0.5);
+  box-shadow:0 0 30px cyan;
+  pointer-events:none;
+  transform:translate(-50%,-50%);
+  z-index:100;
+}
+
+/* 클릭 폭발 */
+.star{
+  position:absolute;
+  background:white;
+  border-radius:50%;
+  pointer-events:none;
+  animation:explode .8s ease-out forwards;
+}
+@keyframes explode{
+  to{
+    transform:translate(var(--x),var(--y)) scale(0);
+    opacity:0;
+  }
 }
 </style>
 </head>
+
 <body>
 
+<div class="nebula"></div>
+
 <div id="ui">
-  <button id="warp">🌠 WARP</button>
-  <button id="blackhole">🕳 BLACKHOLE</button>
-  <button id="sound">🔊 SOUND</button>
+
+  <div class="menu">
+    <a href="game.html">🎮 게임</a>
+    <a href="portfolio.html">💼 포트폴리오</a>
+    <a href="guestbook.html">📝 방명록</a>
+    <a href="about.html">🙋‍♂️ 어바웃 미</a>
+    <a href="contact.html">📚 Contact</a>
+  </div>
+
+  <div class="engine">
+    <button id="warp">🌠 WARP</button>
+    <button id="blackhole">🕳 BLACKHOLE</button>
+    <button id="sound">🔊 SOUND</button>
+  </div>
+
 </div>
 
+<h1 id="title">🚀 CYBER COSMIC OVERDRIVE 🚀</h1>
 <div id="cursor"></div>
 
 <audio id="bgm" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
@@ -67,126 +168,133 @@ button:hover {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 <script>
-let scene = new THREE.Scene();
-let camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 2000);
-let renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
+
+/* ===== THREE SETUP ===== */
+let scene=new THREE.Scene();
+let camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,4000);
+let renderer=new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
+camera.position.z=300;
 
-camera.position.z = 200;
-
-// ===== 별 생성 (10000개) =====
-let starsGeometry = new THREE.BufferGeometry();
-let starVertices = [];
-
-for(let i=0;i<10000;i++){
-  let x = (Math.random()-0.5)*2000;
-  let y = (Math.random()-0.5)*2000;
-  let z = (Math.random()-0.5)*2000;
-  starVertices.push(x,y,z);
+/* ===== 별 15000 ===== */
+let geo=new THREE.BufferGeometry();
+let verts=[];
+for(let i=0;i<15000;i++){
+  verts.push(
+    (Math.random()-0.5)*4000,
+    (Math.random()-0.5)*4000,
+    (Math.random()-0.5)*4000
+  );
 }
+geo.setAttribute('position',new THREE.Float32BufferAttribute(verts,3));
+let mat=new THREE.PointsMaterial({color:0xffffff,size:2});
+let stars=new THREE.Points(geo,mat);
+scene.add(stars);
 
-starsGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices,3));
-let starsMaterial = new THREE.PointsMaterial({color:0xffffff});
-let starField = new THREE.Points(starsGeometry,starsMaterial);
-scene.add(starField);
-
-// ===== 행성 =====
-let planets = [];
-for(let i=0;i<5;i++){
-  let geometry = new THREE.SphereGeometry(20+Math.random()*20,32,32);
-  let material = new THREE.MeshStandardMaterial({
-    color: new THREE.Color(`hsl(${Math.random()*360},100%,50%)`),
-    emissive: 0x111111
+/* ===== 행성 ===== */
+let planets=[];
+for(let i=0;i<6;i++){
+  let g=new THREE.SphereGeometry(20+Math.random()*30,32,32);
+  let m=new THREE.MeshStandardMaterial({
+    color:new THREE.Color(`hsl(${Math.random()*360},100%,50%)`)
   });
-  let planet = new THREE.Mesh(geometry,material);
-  planet.position.x = 200 + i*150;
-  scene.add(planet);
-  planets.push(planet);
+  let p=new THREE.Mesh(g,m);
+  scene.add(p);
+  planets.push(p);
 }
-
-let light = new THREE.PointLight(0xffffff,2,1000);
-light.position.set(0,0,0);
+let light=new THREE.PointLight(0xffffff,2,3000);
 scene.add(light);
 
-// ===== 마우스 카메라 제어 =====
-document.addEventListener('mousemove',(e)=>{
-  let x = (e.clientX/window.innerWidth - 0.5)*2;
-  let y = (e.clientY/window.innerHeight - 0.5)*2;
-  camera.rotation.y = x*0.5;
-  camera.rotation.x = y*0.5;
-
-  document.getElementById('cursor').style.left = e.clientX+"px";
-  document.getElementById('cursor').style.top = e.clientY+"px";
-});
-
-// ===== 애니메이션 =====
+/* ===== 애니메이션 ===== */
 function animate(){
   requestAnimationFrame(animate);
-  starField.rotation.y += 0.0005;
+  stars.rotation.y+=0.0006;
 
   planets.forEach((p,i)=>{
-    p.rotation.y += 0.01;
-    p.position.x = Math.cos(Date.now()*0.0002+i)*300;
-    p.position.z = Math.sin(Date.now()*0.0002+i)*300;
+    p.rotation.y+=0.01;
+    p.position.x=Math.cos(Date.now()*0.0002+i)*500;
+    p.position.z=Math.sin(Date.now()*0.0002+i)*500;
   });
 
   renderer.render(scene,camera);
 }
 animate();
 
-// ===== 워프 모드 =====
-document.getElementById('warp').onclick = ()=>{
-  camera.position.z = 50;
-  let interval = setInterval(()=>{
-    starField.rotation.y += 0.05;
-  },10);
-  setTimeout(()=>{
-    clearInterval(interval);
-    camera.position.z = 200;
-  },2000);
+/* ===== 마우스 ===== */
+const cursor=document.getElementById('cursor');
+document.addEventListener('mousemove',e=>{
+  cursor.style.left=e.clientX+"px";
+  cursor.style.top=e.clientY+"px";
+  camera.rotation.y=(e.clientX/innerWidth-0.5)*0.6;
+  camera.rotation.x=(e.clientY/innerHeight-0.5)*0.6;
+});
+
+/* ===== 클릭 폭발 ===== */
+document.addEventListener('click',e=>{
+  for(let i=0;i<25;i++){
+    let s=document.createElement('div');
+    s.className='star';
+    s.style.left=e.clientX+"px";
+    s.style.top=e.clientY+"px";
+    let a=Math.random()*Math.PI*2;
+    let d=Math.random()*120;
+    s.style.setProperty('--x',Math.cos(a)*d+'px');
+    s.style.setProperty('--y',Math.sin(a)*d+'px');
+    s.style.width=s.style.height=(Math.random()*4+2)+'px';
+    document.body.appendChild(s);
+    setTimeout(()=>s.remove(),800);
+  }
+});
+
+/* ===== 워프 ===== */
+document.getElementById('warp').onclick=()=>{
+  let speed=0.05;
+  let interval=setInterval(()=>{
+    stars.rotation.y+=speed;
+    speed+=0.02;
+  },30);
+  setTimeout(()=>clearInterval(interval),2000);
 };
 
-// ===== 블랙홀 =====
-document.getElementById('blackhole').onclick = ()=>{
-  planets.forEach(p=>{
-    p.position.multiplyScalar(0.5);
-  });
+/* ===== 블랙홀 ===== */
+document.getElementById('blackhole').onclick=()=>{
+  planets.forEach(p=>p.position.multiplyScalar(0.2));
 };
 
-// ===== 사운드 + 음악 반응 =====
-let bgm = document.getElementById('bgm');
-let audioContext = new (window.AudioContext || window.webkitAudioContext)();
-let analyser = audioContext.createAnalyser();
-let source = audioContext.createMediaElementSource(bgm);
+/* ===== 음악 반응 ===== */
+let bgm=document.getElementById('bgm');
+let ctx=new (window.AudioContext||window.webkitAudioContext)();
+let analyser=ctx.createAnalyser();
+let source=ctx.createMediaElementSource(bgm);
 source.connect(analyser);
-analyser.connect(audioContext.destination);
-analyser.fftSize = 256;
-let dataArray = new Uint8Array(analyser.frequencyBinCount);
+analyser.connect(ctx.destination);
+analyser.fftSize=256;
+let data=new Uint8Array(analyser.frequencyBinCount);
 
-document.getElementById('sound').onclick = ()=>{
+document.getElementById('sound').onclick=()=>{
   if(bgm.paused){
     bgm.play();
-    audioContext.resume();
-  } else {
+    ctx.resume();
+  }else{
     bgm.pause();
   }
 };
 
-function audioReactive(){
-  analyser.getByteFrequencyData(dataArray);
-  let avg = dataArray.reduce((a,b)=>a+b)/dataArray.length;
-  starField.scale.setScalar(1+avg/300);
-  requestAnimationFrame(audioReactive);
+function react(){
+  analyser.getByteFrequencyData(data);
+  let avg=data.reduce((a,b)=>a+b)/data.length;
+  stars.scale.setScalar(1+avg/400);
+  requestAnimationFrame(react);
 }
-audioReactive();
+react();
 
 window.addEventListener('resize',()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
+  camera.aspect=innerWidth/innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
+  renderer.setSize(innerWidth,innerHeight);
 });
-</script>
 
+</script>
 </body>
 </html>
